Deployment 2021-06-11 05:12 PM Admin User/Add Designer Job to Careers Page#####

--- a/templates/components/menus/main.sidebar.html
+++ b/templates/components/menus/main.sidebar.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="side_menu_pane side_menu_pane_primary" id="side_menu_root" data-id="root" style="z-index:0">
-  <div class="side_menu_item"><a class="side_menu_logo" href="/"><img src="/images/logo.png" alt="Company" /></a></div>
+  <div class="side_menu_item"><a class="side_menu_logo" href="./"><img src="images/logo.png" alt="Company" /></a></div>
   <%-renderTemplate('menu-items', menu.tree)%>
 </div>
 
