--- a/templates/websnippets/panel.bios.html
+++ b/templates/websnippets/panel.bios.html
@@ -9,7 +9,7 @@
   <div class="pnlBios_bio">
     <div class="pnlBios_photo">
       <div class="pnlBios_spacer"></div>
-      <img src="/images/bio_placeholder.png" />
+      <img src="images/bio_placeholder.png" />
     </div>
     <h3 class="pnlBios_name">John Smith</h3>
     <div class="pnlBios_title">Title</div>
@@ -18,7 +18,7 @@
   <div class="pnlBios_bio">
     <div class="pnlBios_photo">
       <div class="pnlBios_spacer"></div>
-      <img src="/images/bio_placeholder.png" />
+      <img src="images/bio_placeholder.png" />
     </div>
     <h3 class="pnlBios_name">John Smith</h3>
     <div class="pnlBios_title">Title</div>
@@ -27,7 +27,7 @@
   <div class="pnlBios_bio">
     <div class="pnlBios_photo">
       <div class="pnlBios_spacer"></div>
-      <img src="/images/bio_placeholder.png" />
+      <img src="images/bio_placeholder.png" />
     </div>
     <h3 class="pnlBios_name">John Smith</h3>
     <div class="pnlBios_title">Title</div>
