--- a/templates/pages/1col_sidebar.html
+++ b/templates/pages/1col_sidebar.html
@@ -6,7 +6,7 @@
 
 <title>jsHarmony CMS</title>
 
-<base href="%%%BASE_HREF%%%">
+<base href="%%%url_prefix%%%">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
